tests/baselines/reference/manyCompilerErrorsInTheTwoFiles.errors.txt
[91m● [0m[96ma.ts[0m:[93m1[0m:[93m12[0m   [91mError[0m TS18026
| const a =!@#!@$
  [91m           [0m
'#!' can only be used at the start of a file.
[91m● [0m[96ma.ts[0m:[93m1[0m:[93m13[0m  [91mError[0m TS1134
| const a =!@#!@$
  [91m            ▔[0m
Variable declaration expected.
[91m● [0m[96ma.ts[0m:[93m1[0m:[93m16[0m  [91mError[0m TS1109
| const a =!@#!@$
  [91m               [0m
Expression expected.
[91m● [0m[96ma.ts[0m:[93m2[0m:[93m13[0m   [91mError[0m TS18026
| const b = !@#!@#!@#!
  [91m            [0m
'#!' can only be used at the start of a file.
[91m● [0m[96ma.ts[0m:[93m2[0m:[93m14[0m  [91mError[0m TS1134
| const b = !@#!@#!@#!
  [91m             ▔[0m
Variable declaration expected.
[91m● [0m[96ma.ts[0m:[93m2[0m:[93m16[0m   [91mError[0m TS18026
| const b = !@#!@#!@#!
  [91m               [0m
'#!' can only be used at the start of a file.
[91m● [0m[96ma.ts[0m:[93m2[0m:[93m19[0m   [91mError[0m TS18026
| const b = !@#!@#!@#!
  [91m                  [0m
'#!' can only be used at the start of a file.
[91m● [0m[96ma.ts[0m:[93m3[0m:[93m1[0m  [91mError[0m TS2304
| OK!
  [91m▔▔[0m
Cannot find name 'OK'.
[91m● [0m[96ma.ts[0m:[93m4[0m:[93m1[0m  [91mError[0m TS1434
| HERE's A shouty thing
  [91m▔▔▔▔[0m
Unexpected keyword or identifier.
[91m● [0m[96ma.ts[0m:[93m4[0m:[93m1[0m  [91mError[0m TS2304
| HERE's A shouty thing
  [91m▔▔▔▔[0m
Cannot find name 'HERE'.
[91m● [0m[96ma.ts[0m:[93m4[0m:[93m22[0m  [91mError[0m TS1002
| HERE's A shouty thing
  [91m                     [0m
Unterminated string literal.
[91m● [0m[96ma.ts[0m:[93m5[0m:[93m1[0m  [91mError[0m TS1434
| GOTTA GO FAST
  [91m▔▔▔▔▔[0m
Unexpected keyword or identifier.
[91m● [0m[96ma.ts[0m:[93m5[0m:[93m1[0m  [91mError[0m TS2304
| GOTTA GO FAST
  [91m▔▔▔▔▔[0m
Cannot find name 'GOTTA'.
[91m● [0m[96ma.ts[0m:[93m5[0m:[93m7[0m  [91mError[0m TS1434
| GOTTA GO FAST
  [91m      ▔▔[0m
Unexpected keyword or identifier.
[91m● [0m[96ma.ts[0m:[93m5[0m:[93m7[0m  [91mError[0m TS2304
| GOTTA GO FAST
  [91m      ▔▔[0m
Cannot find name 'GO'.
[91m● [0m[96ma.ts[0m:[93m5[0m:[93m10[0m  [91mError[0m TS2304
| GOTTA GO FAST
  [91m         ▔▔▔▔[0m
Cannot find name 'FAST'.
[91m● [0m[96mb.ts[0m:[93m1[0m:[93m1[0m  [91mError[0m TS2304
| fhqwhgads
  [91m▔▔▔▔▔▔▔▔▔[0m
Cannot find name 'fhqwhgads'.
[91m● [0m[96mb.ts[0m:[93m2[0m:[93m1[0m  [91mError[0m TS2304
| to
  [91m▔▔[0m
Cannot find name 'to'.
[91m● [0m[96mb.ts[0m:[93m3[0m:[93m1[0m  [91mError[0m TS2304
| limit
  [91m▔▔▔▔▔[0m
Cannot find name 'limit'.


==== a.ts (16 errors) ====
    const a =!@#!@$
               
!!! error TS18026: '#!' can only be used at the start of a file.
                ~
!!! error TS1134: Variable declaration expected.
                   
!!! error TS1109: Expression expected.
    const b = !@#!@#!@#!
                
!!! error TS18026: '#!' can only be used at the start of a file.
                 ~
!!! error TS1134: Variable declaration expected.
                   
!!! error TS18026: '#!' can only be used at the start of a file.
                      
!!! error TS18026: '#!' can only be used at the start of a file.
    OK!
    ~~
!!! error TS2304: Cannot find name 'OK'.
    HERE's A shouty thing
    ~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~
!!! error TS2304: Cannot find name 'HERE'.
                         
!!! error TS1002: Unterminated string literal.
    GOTTA GO FAST
    ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~
!!! error TS2304: Cannot find name 'GOTTA'.
          ~~
!!! error TS1434: Unexpected keyword or identifier.
          ~~
!!! error TS2304: Cannot find name 'GO'.
             ~~~~
!!! error TS2304: Cannot find name 'FAST'.
    
==== b.ts (3 errors) ====
    fhqwhgads
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'fhqwhgads'.
    to
    ~~
!!! error TS2304: Cannot find name 'to'.
    limit
    ~~~~~
!!! error TS2304: Cannot find name 'limit'.
Found 19 errors in 2 files.

Errors  Files
    16  a.ts[90m:1[0m
     3  b.ts[90m:1[0m
